src/okslack/main/domain/objects/Slack_for_One_Logger_Setting__mdt/Slack_for_One_Logger_Setting__mdt.object-meta.xml
<CustomObject>
    <description>Configure your Slack messages for One Logger events.</description>
    <label>Slack for One Logger Setting</label>
    <pluralLabel>Slack for One Logger Settings</pluralLabel>
</CustomObject>