src/okslack/main/domain/objects/Slack_for_One_Logger_Setting__mdt/fields/Log_Field_Set__c.field-meta.xml
<CustomField>
    <fullName>Log_Field_Set__c</fullName>
    <defaultValue>&apos;Slack_Log_Field_Set&apos;</defaultValue>
    <description>You can configure the fields to send in the message using a field set. Value should be the field set API name. Note that this field set is created on ok__Log__c object but the field values will be populated from ok__Log_Event__e record.</description>
    <inlineHelpText>You can configure the fields to send in the message using a field set. Value should be the field set API name. Note that this field set is created on ok__Log__c object but the field values will be populated from ok__Log_Event__e record.</inlineHelpText>
    <label>Log Field Set</label>
    <length>64</length>
    <type>Text</type>
</CustomField>