src/okslack/main/domain/objects/Slack_for_One_Logger_Setting__mdt/fields/Log_Filter__c.field-meta.xml
<CustomField>
    <fullName>Log_Filter__c</fullName>
    <description>Send Slack message based on the filter.</description>
    <inlineHelpText>Send Slack message based on the filter.</inlineHelpText>
    <label>Log Filter</label>
    <referenceTo>ok__Log_Filter__mdt</referenceTo>
    <relationshipLabel>Slack for One Logger Settings</relationshipLabel>
    <relationshipName>Slack_for_One_Logger_Settings</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>