src/okslack/main/domain/objects/Slack_for_One_Logger_Setting__mdt/fields/Mention_Here__c.field-meta.xml
<CustomField>
    <fullName>Mention_Here__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Add @here mention.</description>
    <inlineHelpText>Add @here mention.</inlineHelpText>
    <label>Mention Here</label>
    <type>Checkbox</type>
</CustomField>