src/okslack/main/domain/objects/Slack_for_One_Logger_Setting__mdt/fields/Mention_User_Ids__c.field-meta.xml
<CustomField>
    <fullName>Mention_User_Ids__c</fullName>
    <description>Semicolon separated list of Slack User Ids to mention in the message.</description>
    <inlineHelpText>Semicolon separated list of Slack User Ids to mention in the message.</inlineHelpText>
    <label>Mention User Ids</label>
    <length>255</length>
    <type>Text</type>
</CustomField>