src/okslack/main/domain/objects/Slack_for_One_Logger_Setting__mdt/fields/Named_Credential__c.field-meta.xml
<CustomField>
    <fullName>Named_Credential__c</fullName>
    <defaultValue>&apos;Slack_for_One_Logger&apos;</defaultValue>
    <description>Named Credential with the Slack webhook. Default is &apos;Slack_for_One_Logger&apos;. Note that Named Credential must be created manually.</description>
    <inlineHelpText>Named Credential with the Slack webhook. Default is &apos;Slack_for_One_Logger&apos;. Note that Named Credential must be created manually.</inlineHelpText>
    <label>Named Credential</label>
    <length>64</length>
    <required>true</required>
    <type>Text</type>
</CustomField>